[Fix] - Added align CSS to _header-layouts.scss CSS and removed from _navigation.scss which loads only when primary header is set.

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -2742,16 +2742,10 @@ body {
 
 .header-main-layout-1 .ast-main-header-bar-alignment {
   margin-right: auto;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
 }
 
 .header-main-layout-3 .ast-main-header-bar-alignment {
   margin-left: auto;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
 }
 
 #site-navigation {
@@ -2868,6 +2862,14 @@ body {
   vertical-align: top;
 }
 
+.header-main-layout-1 .main-header-container {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
 /**
  * 2 - Header Layout 2
 */
@@ -2959,6 +2961,11 @@ body {
   -moz-box-direction: reverse;
   -ms-flex-direction: row-reverse;
   flex-direction: row-reverse;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .header-main-layout-3 .main-navigation {
