--- a/sass/site/navigation/_navigation.scss
+++ b/sass/site/navigation/_navigation.scss
@@ -90,14 +90,12 @@
 .header-main-layout-1 {
 	.ast-main-header-bar-alignment {
 		margin-left: auto;
-		align-self: center;
 	}
 }
 
 .header-main-layout-3 {
 	.ast-main-header-bar-alignment {
 		margin-right: auto;
-		align-self: center;
 	}
 }
 
